Fix missing padding.

--- a/geoshape/static/less/iaff.less
+++ b/geoshape/static/less/iaff.less
@@ -451,14 +451,19 @@ header.jumbotron {
 
 aside {
   margin-top: 0;
+
   .well {
     background: white;
     border: 1px solid @grayLight;
     margin-top: 20px;
-    padding: 0;
 
     h2 {
-      margin: 0px;
+      border-bottom: 1px solid #ccc;
+      margin: -19px -19px 0;
+      padding: 4px 15px 3px;
+      text-transform: uppercase;
+      font-family: 'Lato',sans-serif;
+      font-weight: 400;
     }
   }
   h4 {
